--- a/tgas4.html
+++ b/tgas4.html
@@ -8,7 +8,7 @@
 
     <body>
 <div class="card">
-            <img src="https://images.unsplash.com/photo-1557862921-37829c790f19?q=80&w=2071&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"width="170"
+            <img src="tgs13.jpg"width="170"
             height="170" div class="card" alt="img">
 
             <div class="info">
@@ -30,6 +30,36 @@
 
             </div>
     </body>
+
+    <style>
+        .img{
+    display: grid;
+    grid-template-columns: 2fr;
+    gap: 50px;
+    background-color: #5165bc;
+    padding: 10px;
+    border-radius: 10px;
+    margin: auto;
+    object-fit: cover;
+}
+
+.tag{
+
+    display: flex;
+}
+.button{
+    display: flex;
+    
+}
+
+.card{
+    display: flex;
+    margin-top: auto;
+    background-origin: padding-box;
+    border-color: #5165bc;
+    
+}
+    </style>
 
 
     </html>
